--- a/src/index.html
+++ b/src/index.html
@@ -14,16 +14,19 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
+      <h1 class="mt-5">Omg you won't believe me but</h1>
+      <p id="excuse" class="mt-5">😎</p>
+      <button id="button">Generate a new excuse!</button>
+      <!-- <img src="./rigo-baby.jpg" /> -->
+      <!-- <p class="alert alert-warning mt-4">
         If this text is <b>not</b> centered and <b>yellow</b>, you probably have
         an error
       </p>
       <div class="fixed-bottom p-4">
         Made with ❤️ by
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
-      </div>
+      </div>-->
+      <script type="text/javascript" src="src/app.js"></script>
     </div>
   </body>
 </html>
